<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".RegisterAcitivity">

    <TextView
        android:id="@+id/medicalServicesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24_7_medical_services"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicalServicesTextView"
        app:layout_constraintVertical_bias="0.124" />

    <EditText
        android:id="@+id/userNameEditView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:hint="@string/usernameEditTextHint"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/input_bg"
        android:padding="10sp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/loginTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"
        />

    <EditText
        android:id="@+id/emailTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/input_bg"
        android:padding="10sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/userNameEditView"
        app:layout_constraintBottom_toTopOf="@id/passwordEditView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"

        />




    <EditText
        android:id="@+id/passwordEditView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Username"
        android:hint="@string/passwordTextViewHint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/input_bg"
        android:padding="10sp"
        android:password="true"
        android:drawableStart="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/confirmPasswordEditText"

        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Username"
        android:hint="Confirm Password"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/input_bg"
        android:padding="10sp"
        android:password="true"
        android:drawableStart="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/passwordEditView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />




    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.2"
        />

    <TextView
        android:id="@+id/registerNewUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="Already have an account?"
        app:layout_constraintVertical_bias="0.1"
        />


</androidx.constraintlayout.widget.ConstraintLayout>